# v-c-service

./: .gitignore  README.md  config.h.in  meson.build
examples/: meson.build
examples/stdout_logger/: meson.build
examples/stdout_logger/src/: main.c
include/vcservice/: error_codes.h  log.h  path.h
src/log/: log_internal.h  vcservice_log_append_int16.c  vcservice_log_append_int32.c  vcservice_log_append_int64.c  vcservice_log_append_int8.c  vcservice_log_append_log_level.c  vcservice_log_append_string.c  vcservice_log_append_uint16.c  vcservice_log_append_uint32.c  vcservice_log_append_uint64.c  vcservice_log_append_uint8.c  vcservice_log_append_uuid.c  vcservice_log_create_from_psock.c  vcservice_log_create_using_standard_output.c  vcservice_log_format_default_sentry.c  vcservice_log_format_hex_sentry.c  vcservice_log_format_set_default.c  vcservice_log_format_set_hex.c  vcservice_log_message_commit.c  vcservice_log_message_start.c  vcservice_log_resource_handle.c  vcservice_log_resource_release.c  vcservice_log_threshold_level.c  vcservice_log_write_psock.c
src/path/: path_append_default.c  path_dirname.c
subprojects/: gtest.wrap  minunit.wrap  rcpr.wrap  vccert.wrap  vccrypt.wrap  vcdb.wrap  vcmodel.wrap  vpr.wrap
test/log/: test_vcservice_log_basics.cpp  test_vcservice_log_create_from_descriptor.cpp  test_vcservice_log_create_from_psock.cpp
test/path/: test_path_append_default.cpp  test_path_dirname.cpp
